evidence/terminal_logs/melotts_import_retry_stderr.txt
  File "<string>", line 1
    print('Before
                 ^
SyntaxError: EOL while scanning string literal
